Fixed home search boxes (locations, alignments)

--- a/src/assets/styles/block/_banner.scss
+++ b/src/assets/styles/block/_banner.scss
@@ -141,7 +141,7 @@
 		}
 		&__body {
 			margin-bottom: 60px;
-			.custom-tab
+			.custom-tab,
 			.form-control,
 			.input-group-btn .btn,
 			.chosen-container {
